# backend

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  all.sql  app_ai.py  appv2.py  appv3.py  compose.yml  dashboard.py  data_loader.py  debug.py  justfile  package.json.off  providers.json  pyproject.toml  readme.md
apps/base/templates/: index.html
apps/dashboard/: serializers.py  urls.py  views.py
apps/insight/: apps.py  models.py  tasks.py  urls.py
apps/insight/migrations/: 0002_alter_task_sent_at.py  0003_activetaskrecord_queuestatus_workerstatus.py  0004_alter_task_state_alter_taskresult_state.py  0005_delete_taskresult.py  0006_taskevent.py  (+6 more)
backend/: celery.py  logging_config.py  settings.py  urls.py
config/: mkdocs.yml
config/docker/: Dockerfile.web
deploy/: README.md
fixtures/: app.py  app_ai.py  app_class.py  dashboard.py  data_loader.py  sftpgoevents.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
insight/: admin.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
insight/migrations/: 0001_initial.py  0008_rename_id_task_uuid.py  0010_rename_state_task_status_and_more.py  0011_remove_task_exchange_remove_task_routing_key_and_more.py  0014_sftpgo.py
vod/: admin.py  api.py  apiv2.py  models.py  tasks.py  urls.py
vod/migrations/: 0001_initial.py  0002_rename_content_duration_ms_edge_content_duration.py  0003_delete_activetaskrecord_delete_queuestatus_and_more.py  0004_offer_stream_offer.py  0005_offer_env.py  0006_alter_offer_env.py  0007_alter_offer_env_stream_vod_stream_uri_17144d_idx.py  0008_stream_unq_offer_uri.py  0009_offer_vod_offer_offer_i_7704d2_idx_and_more.py
voda/: apps.py  models.py
vue-tailwind-admin-dashboard-main/: README.md  package.json  tsconfig.json
(+136 files in other folders)
